--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -1,8 +1,11 @@
-/* CarList.module.css */
 .list {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 32px;
   padding: 0;
   margin: 0;
+}
+
+.item {
+  list-style: none;
 }
