--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,11 @@
 .header {
-  padding: 20px 0;
-  border-bottom: 1px solid var(--gray-light);
-  background-color: var(--white);
+  padding: 24px 0;
+  border-bottom: 1px solid var(--badges);
+  max-width: 1440px;
+  height: 68px;
+  margin: 0 auto;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .nav {
@@ -12,7 +16,7 @@
 
 .logo {
   font-weight: 900;
-  font-size: 20px;
+  font-size: 18px;
   color: var(--main);
   text-decoration: none;
   font-family: var(--font-family);
