--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -14,6 +14,33 @@
   object-fit: cover;
 }
 
+.imageWrapper {
+  position: relative;
+}
+
+.favoriteButton {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.icon {
+  width: 16px;
+  height: 16px;
+}
+
+.active {
+  fill: var(--button);
+}
+
+.disabled {
+  fill: var(--badges);
+}
+
 .content {
   padding-top: 16px;
   display: flex;
@@ -86,12 +113,10 @@
   background-color: var(--button);
   display: block;
   margin-top: 28px;
-  transition:
-    background-color 0.25s,
-    transform 0.25s;
+  transition: background-color 0.25s;
 }
 
-.buttonCard:hover {
+.buttonCard:hover,
+.buttonCard:focus {
   background-color: var(--button-hover);
-  transform: scale(1.1);
 }
